# examples

./: .gitignore  .hbproject  README.md  dsb_salesdash.yml  dsb_salesdashboard.yml  dsb_toplevelmetrics.yml  m_customers.yml  m_orders.yml  m_products.yml  m_sales.yml  mtr_customercount.yml  mtr_revenue.yml  mtr_revenuepercustomer.yml  sv_customergrowthandrevenuepercustomer.yml  sv_deliverysaturation.yml  sv_discountcodedistributions.yml  sv_discountcodesbyloyaltystatuspivot.yml  sv_orderingtrends.yml  sv_revenuebysubscriptionandpaymentmethod.yml  sv_revenuetodate.yml  sv_salesbycategory.yml  sv_topsellingproducts.yml  sv_typeandsizebreakdown.yml
bq_cost_analyzer/: compute_costs.yml  dashboard.yml  hashboard_palette.yml  homepage_launchpad.yml  job_metadata.yml  m_job_metadata.yml  metric_compute_cost.yml  metric_gb_billed.yml  most_expensive_tables.yml  sv_compute_cost_by_statement.yml  sv_compute_costs.yml  sv_most_expensive_tables.yml
github_issues/: README.md  dsb_dbtcoreissues.yml  extract.py  m_issuesandpullrequests.yml  mtr_bugsreported.yml  mtr_closedissues.yml  mtr_closedpullrequests.yml  mtr_issuescreated.yml  palette_twilightalt.yml  pyproject.toml  sv_bugsfiled.yml  sv_issuecompletionbytheme.yml  sv_issuecreationbytheme.yml  sv_latestupdate.yml  sv_openbugdetails.yml  sv_recentlyclosedissues.yml  sv_recentlyclosedpullrequests.yml  sv_top12closedprauthors.yml
snow_leaderboard/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
snow_leaderboard/src/etl/: __init__.py  __main__.py  check_for_powder.py  constants.py  download.py  extract_daily_data.py  extract_ski_locations.py  load_hashboard.py  paths.py  transform_season_data.py  update_dashboard_filter.py  upload.py
snow_leaderboard/src/viz/: dsb_snowleaderboard.yml  launchpad_untitled.yml  m_skiareas.yml  m_snowfall.yml  mtr_totalsnowfallco.yml  palette_hashboard.yml  sv_cumulativesnowfallyoybyskiarea.yml  sv_maxcumulativesnowfallyoybystate.yml  sv_toppowderdays.yml  sv_topskiareast7days.yml  sv_topskiareasyesterday_1.yml  sv_topskiareasytd.yml
(+116 files in other folders)
