[tool.poetry]
name = "github-issues"
version = "0.1.0"
description = ""
authors = ["Andrew Lee <andrew@hashboard.com>"]
readme = "README.md"
packages = [{include = "github_issues"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
hashboard-cli = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
