[tool.poetry]
name = "snow-leaderboard"
version = "0.1.0"
description = "Creates a Hashboard using NWS Snow data; orchestrated using Prefect."
authors = ["Ted Conbeer <tconbeer@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "viz", from = "src" },
    { include = "etl", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
prefect = "^2.14.2"
hashboard-cli = "^1.0.3"
rasterio = "^1.3.9"
requests = "^2.31.0"
duckdb = "^0.9.1"
boto3 = "^1.28.73"
pandas = "^2.1.2"
pyarrow = "^13.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
harlequin = "^1.2.0"
types-requests = "^2.31.0.10"
pandas-stubs = "^2.1.1.230928"
boto3-stubs = "^1.28.74"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["A", "B", "E", "F", "I"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
mypy_path = "src:stubs"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true
